--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -19,7 +20,7 @@
       opacity: 0.5;
     }
   </style>
-  <script>
+   <script>
     var score = 0; // Anfangspunktestand
     var answered = {}; // Objekt, um den Antwortstatus für jedes Objekt zu speichern
     var startDialogShown = false; // Flag, um zu überprüfen, ob der Startdialog gezeigt wurde
@@ -53,7 +54,7 @@
           }
         };
 
-        el.addEventListener('click', function () {
+        el.addEventListener('touchstart', function () {
           // Zeigen Sie den Dialog mit der spezifischen Frage für dieses Objekt an
           if (!answered[el.id] || !answered[el.id].answered) {
             showDialog(questions[el.id]);
