--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       opacity: 0.5;
     }
   </style>
-   <script>
+  <script>
     var score = 0; // Anfangspunktestand
     var answered = {}; // Objekt, um den Antwortstatus für jedes Objekt zu speichern
     var startDialogShown = false; // Flag, um zu überprüfen, ob der Startdialog gezeigt wurde
@@ -54,7 +54,7 @@
           }
         };
 
-        el.addEventListener('touchstart', function () {
+        el.addEventListener('click', function () {
           // Zeigen Sie den Dialog mit der spezifischen Frage für dieses Objekt an
           if (!answered[el.id] || !answered[el.id].answered) {
             showDialog(questions[el.id]);
@@ -131,15 +131,15 @@
   <!-- Benutzerdefinierte Marker -->
   <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-box id="box" position="0 0.5 0" color="red" change-color-and-show-dialog class="raycastable"></a-box>
+    <a-box id="box" position="0 0.5 -1.6" color="red" change-color-and-show-dialog class="raycastable"></a-box>
   </a-marker>
   <a-marker id="marker2" type="pattern" url="marker\pattern-B_Marker.patt">
     <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-sphere id="sphere" position="0 0.5 0" radius="0.5" color="blue" change-color-and-show-dialog class="raycastable"></a-sphere>
+    <a-sphere id="sphere" position="0 0.5 -1.6" radius="0.5" color="blue" change-color-and-show-dialog class="raycastable"></a-sphere>
   </a-marker>
   <a-marker id="marker3" type="pattern" url="marker\pattern-A_Marker.patt">
     <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-cylinder id="cylinder" position="0 0.5 0" radius="0.5" height="1" color="yellow" change-color-and-show-dialog class="raycastable"></a-cylinder>
+    <a-cylinder id="cylinder" position="0 0.5 -1.6" radius="0.5" height="1" color="yellow" change-color-and-show-dialog class="raycastable"></a-cylinder>
   </a-marker>
 
   <!-- Kamera mit Cursor und Raycaster -->
