--- a/index.html
+++ b/index.html
@@ -52,13 +52,17 @@
             correctAnswer: "8"
           }
         };
+        var timer; // Timer-Variable
 
-        el.addEventListener('click', function () {
-          // Zeigen Sie den Dialog mit der spezifischen Frage für dieses Objekt an
-          if (!answered[el.id] || !answered[el.id].answered) {
-            showDialog(questions[el.id]);
-          }
-        });
+      el.addEventListener('mouseenter', function () {
+      // Starte den Timer, wenn der Cursor das Objekt betritt
+      timer = setTimeout(function() {
+        // Zeigen Sie den Dialog mit der spezifischen Frage für dieses Objekt an, nach Ablauf der Zeit
+        if (!answered[el.id] || !answered[el.id].answered) {
+          showDialog(questions[el.id]);
+        }
+      }, 2000); // Hier kannst du die Zeit in Millisekunden anpassen (hier: 1,5 Sekunden)
+    });
 
         function showDialog(questionObj) {
           var dialogHTML = `
