--- a/index.html
+++ b/index.html
@@ -77,22 +77,38 @@
 
         // Festlegen der spezifischen Frage für jedes Objekt
         var questions = {
-          box: {
+          image1: {
             question: "Was ist 2+2?",
             answers: ["A: 3", "B: 4", "C: 5", "D: 6"],
             correctAnswer: "B"
           },
-          sphere: {
-            question: "Was ist die Hauptstadt von Frankreich?",
+          image2: {
+            question: "Was ist die Hauptstadt von Deutschland?",
             answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
+            correctAnswer: "D"
+          },
+          image3: {
+            question: "Was ist die Hauptstadt von Spanien?",
+            answers: ["A: London", "B: Rom", "C: Madrid", "D: Berlin"],
             correctAnswer: "C"
           },
-          cylinder: {
+          image4: {
+            question: "Was ist die Hauptstadt von Italien?",
+            answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
+            correctAnswer: "B"
+          },
+          image5: {
+            question: "Was ist auf dem Bild zu sehen?",
+            answers: ["A: Eine Kugel", "B: Ein Würfel", "C: Ein Zylinder", "D: Ein Bild"],
+            correctAnswer: "D"
+          },
+          image6: {
             question: "Wie viele Ecken hat ein Würfel?",
             answers: ["A: 4", "B: 6", "C: 8", "D: 12"],
             correctAnswer: "C"
           }
         };
+
         var timer; // Timer-Variable
 
         el.addEventListener('mouseenter', function () {
@@ -202,16 +218,29 @@
   <!-- Benutzerdefinierte Marker -->
   <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-box id="box" position="0 0.5 0" color="red" change-color-and-show-dialog class="raycastable"></a-box>
+    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image1" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
-  <a-marker id="marker2" type="pattern" url="marker\pattern-B_Marker.patt">
+  <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
+    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
+    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image2" change-color-and-show-dialog="raycastable"></a-image>
+  </a-marker>
+  <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
+    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
+    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image3" change-color-and-show-dialog="raycastable"></a-image>
+  </a-marker>
+  <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
+    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
+    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image4" change-color-and-show-dialog="raycastable"></a-image>
+  </a-marker>
+  <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
     <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-sphere id="sphere" position="0 0.5 0" radius="0.5" color="blue" change-color-and-show-dialog class="raycastable"></a-sphere>
+    <a-image src="images/first_3.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image5" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
-  <a-marker id="marker3" type="pattern" url="marker\pattern-A_Marker.patt">
+  <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
     <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-cylinder id="cylinder" position="0 0.5 0" radius="0.5" height="1" color="yellow" change-color-and-show-dialog class="raycastable"></a-cylinder>
+    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image6" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
+  
   <!-- Kamera mit Cursor und Raycaster -->
   <a-camera-static raycaster="objects: .raycastable">
     <a-cursor></a-cursor>
