add the fotos to all marker

--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@
   <!-- Benutzerdefinierte Marker -->
   <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image1" change-color-and-show-dialog="raycastable"></a-image>
+    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image1" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
   <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image2" change-color-and-show-dialog="raycastable"></a-image>
+    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image2" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
   <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image3" change-color-and-show-dialog="raycastable"></a-image>
+    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image3" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
   <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
     <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="first.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image4" change-color-and-show-dialog="raycastable"></a-image>
+    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image4" change-color-and-show-dialog="raycastable"></a-image>
   </a-marker>
   <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
     <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
