--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
 
         // Festlegen der spezifischen Frage für jedes Objekt
         var questions = {
-          image1: {
+          box1: {
             question: "Was ist 2+2?",
             answers: ["A: 3", "B: 4", "C: 5", "D: 6"],
             correctAnswer: "B"
           },
-          image2: {
+          box2: {
             question: "Was ist die Hauptstadt von Deutschland?",
             answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
             correctAnswer: "D"
           },
-          image3: {
+          box3: {
             question: "Was ist die Hauptstadt von Spanien?",
             answers: ["A: London", "B: Rom", "C: Madrid", "D: Berlin"],
             correctAnswer: "C"
           },
-          image4: {
+          box4: {
             question: "Was ist die Hauptstadt von Italien?",
             answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
             correctAnswer: "B"
           },
-          image5: {
+          box5: {
             question: "Was ist auf dem Bild zu sehen?",
             answers: ["A: Eine Kugel", "B: Ein Würfel", "C: Ein Zylinder", "D: Ein Bild"],
             correctAnswer: "D"
           },
-          image6: {
+          box6: {
             question: "Wie viele Ecken hat ein Würfel?",
             answers: ["A: 4", "B: 6", "C: 8", "D: 12"],
             correctAnswer: "C"
@@ -217,29 +217,53 @@
 <a-scene embedded arjs='sourceType: webcam;'>
   <!-- Benutzerdefinierte Marker -->
   <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
-    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image1" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box1" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_1.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
-    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image2" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box2" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_2.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
-    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image3" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box3" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_3.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
-    <!-- Platzieren Sie das virtuelle Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image4" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box4" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_4.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
-    <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_3.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image5" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box5" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_5.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
-    <!-- Platzieren Sie ein anderes virtuelles Objekt innerhalb dieses Markers -->
-    <a-image src="images/first_1.png" geometry="primitive: plane; width: 6; height: 3" rotation="-90 0 0" id="image6" change-color-and-show-dialog="raycastable"></a-image>
+    <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
+    <a-box color="white" depth="0.1" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box6" change-color-and-show-dialog="raycastable">
+      <!-- Füge das Bild als Textur für die Box hinzu -->
+      <a-plane src="images/first_6.png" height="1.5" width="3" material="side: double;"></a-plane>
+    </a-box>
   </a-marker>
+  
   
   <!-- Kamera mit Cursor und Raycaster -->
   <a-camera-static raycaster="objects: .raycastable">
