--- a/index.html
+++ b/index.html
@@ -220,42 +220,42 @@
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
     <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box1" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_1.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_1.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
     <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box2" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_2.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_2.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
     <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box3" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_3.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_3.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
-    <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box4" change-color-and-show-dialog="raycastable"></a-box>
+    <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" rotation="-90 0 0" id="box4" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_4.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_4.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
     <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box5" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_5.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_5.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
     <!-- Platzieren Sie die virtuelle Box innerhalb dieses Markers -->
     <a-box color="white" depth="0.01" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="box6" change-color-and-show-dialog="raycastable"></a-box>
     <!-- Füge das Bild als Textur für die Box hinzu -->
-    <a-plane src="images/first_6.png" height="1.5" width="3" position="0 0 0.005" material="side: double;"></a-plane>
+    <a-plane src="images/first_6.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" material="side: double;"></a-plane>
   </a-marker>
   
   
