--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
 
         // Festlegen der spezifischen Frage für jedes Objekt
         var questions = {
-          box1: {
+          image1: {
             question: "Was ist 2+2?",
             answers: ["A: 3", "B: 4", "C: 5", "D: 6"],
             correctAnswer: "B"
           },
-          box2: {
+          image2: {
             question: "Was ist die Hauptstadt von Deutschland?",
             answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
             correctAnswer: "D"
           },
-          box3: {
+          image3: {
             question: "Was ist die Hauptstadt von Spanien?",
             answers: ["A: London", "B: Rom", "C: Madrid", "D: Berlin"],
             correctAnswer: "C"
           },
-          box4: {
+          image4: {
             question: "Was ist die Hauptstadt von Italien?",
             answers: ["A: London", "B: Rom", "C: Paris", "D: Berlin"],
             correctAnswer: "B"
           },
-          box5: {
+          image5: {
             question: "Was ist auf dem Bild zu sehen?",
             answers: ["A: Eine Kugel", "B: Ein Würfel", "C: Ein Zylinder", "D: Ein Bild"],
             correctAnswer: "D"
           },
-          box6: {
+          image6: {
             question: "Wie viele Ecken hat ein Würfel?",
             answers: ["A: 4", "B: 6", "C: 8", "D: 12"],
             correctAnswer: "C"
@@ -216,32 +216,24 @@
 </div>
 <a-scene embedded arjs='sourceType: webcam;'>
   <!-- Benutzerdefinierte Marker -->
-  <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
-    <a-plane src="images/first_1.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box1" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
-  </a-marker>
-  
-  <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
-    <a-plane src="images/first_2.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box2" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
-  </a-marker>
-  
-  <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
-    <a-plane src="images/first_3.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box3" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
-  </a-marker>
-  
-  <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
-    <a-plane src="images/first_4.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box4" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
-  </a-marker>
-  
-  <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
-    <a-plane src="images/first_5.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box5" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
-  </a-marker>
-  
   <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
-    <a-plane src="images/first_6.png" height="1.5" width="3" position="0 0.1 0" rotation="-90 0 0" id="box6" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+    <a-plane src="images/first_1.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image1" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
   </a-marker>
-  
-  
-  
+  <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
+    <a-plane src="images/first_2.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image2" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
+    <a-plane src="images/first_3.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image3" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
+    <a-plane src="images/first_4.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image4" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
+    <a-plane src="images/first_5.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image5" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
+    <a-plane src="images/first_6.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image6" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
   <!-- Kamera mit Cursor und Raycaster -->
   <a-camera-static raycaster="objects: .raycastable">
     <a-cursor></a-cursor>
