--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
 
         var timer; // Timer-Variable
 
-        el.addEventListener('fusing', function () {
+        el.addEventListener('mouseenter', function () {
+          // Starte den Timer, wenn der Cursor das Objekt betritt
           timer = setTimeout(function() {
+            // Zeigen Sie den Dialog mit der spezifischen Frage für dieses Objekt an, nach Ablauf der Zeit
             if (!answered[el.id] || !answered[el.id].answered) {
               showDialog(questions[el.id]);
             }
-          }, 2000);
+          }, 2000); // Hier kannst du die Zeit in Millisekunden anpassen (hier: 1,5 Sekunden)
         });
 
         function showDialog(questionObj) {
@@ -227,46 +229,28 @@
   </div>
 <a-scene embedded arjs='sourceType: webcam;'>
   <!-- Benutzerdefinierte Marker -->
-  <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
-    <a-entity>
-      <a-entity id="image1" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_4.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
-  </a-marker>
-  
-  <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
-    <a-entity>
-      <a-entity id="image2" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_2.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
-  </a-marker>
-  
-  <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
-    <a-entity>
-      <a-entity id="image3" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_3.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
-  </a-marker>
-  
-  <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
-    <a-entity>
-      <a-entity id="image4" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_4.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
-  </a-marker>
-  
-  <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
-    <a-entity>
-      <a-entity id="image5" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_5.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
-  </a-marker>
-  
   <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
     <a-entity>
-      <a-entity id="image6" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_6.png; side: double;" change-color-and-show-dialog></a-entity>
-    </a-entity>  
+      <a-entity id="button" geometry="primitive: plane; height: 1.5; width: 3" rotation="-90 0 0" material="src: images/first_4.png; side: double;" change-color-and-show-dialog></a-entity>
+    </a-entity>  </a-marker>
+  <a-marker id="marker5" type="pattern" url="marker\pattern-B_Marker.patt">
+    <a-plane src="images/first_2.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image2" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
   </a-marker>
-  
-  
+  <a-marker id="marker1" type="pattern" url="marker\pattern-C_Marker.patt">
+    <a-plane src="images/first_3.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image3" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker4" type="pattern" url="marker\pattern-D_Marker.patt">
+    <a-plane src="images/first_4.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image4" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker3" type="pattern" url="marker\pattern-E_Marker.patt">
+    <a-plane src="images/first_5.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image5" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
+  <a-marker id="marker2" type="pattern" url="marker\pattern-F_Marker.patt">
+    <a-plane src="images/first_6.png" height="1.5" width="3" position="0 0 0" rotation="-90 0 0" id="image6" material="side: double;" change-color-and-show-dialog="raycastable"></a-plane>
+  </a-marker>
   <!-- Kamera mit Cursor und Raycaster -->
   <a-camera-static raycaster="objects: .raycastable">
-    <a-cursor id="cursor" fuse="fuse: true; fuseTimeout: 2000"></a-cursor>
+    <a-cursor></a-cursor>
   </a-camera-static>
 </a-scene>
 <script>
