--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
   <div id="scoreBar">
     <span id="score">Fragen <span id="totalQuestions"></span>/<span id="questionsSoFare"></span> - Richtig beantwortet: <span id="correctAnswers"></span></span>
   </div>
-<a-scene embedded arjs='sourceType: webcam;'>
-  <!-- Benutzerdefinierte Marker -->
+  <a-scene embedded arjs='sourceType: webcam;' antialias="true" renderer="logarithmicDepthBuffer: true" >  <!-- Benutzerdefinierte Marker -->
   <a-marker id="marker6" type="pattern" url="marker\pattern-A_Marker.patt">
     <a-gltf-model src="gltf/scene.gltf" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="image1" material="side: double;" change-color-and-show-dialog="raycastable"></a-gltf-model>
 </a-marker>
